# Calculator-Qt-App

./: CMakeLists.txt  LICENSE  README.md  compUT.pro  run.sh
.github/workflows/: main.yml
UML/: UML.dia
include/: Atom.h  AtomManager.h  BinaryOperator.h  Calculation.h  ClavierVar.h  ComputerException.h  Controller.h  ExpressionLiteral.h  GCD.h  HandlingOperator.h  Item.h  Layout.h  Literal.h  LiteralManager.h  NEGoperator.h  NumericLiteral.h  NumericLogicOperator.h  NumericOperator.h  Operand.h  Operator.h  Pile.h  PileCareTaker.h  Program.h  QComputer.h  UnaryOperator.h  Utils.h
src/: Atom.cpp  AtomManager.cpp  BinaryOperator.cpp  Calculation.cpp  ClavierVar.cpp  Controller.cpp  ControllerHandleOperator.cpp  HandlingOperator.cpp  Item.cpp  Layout.cpp  LiteralManager.cpp  NEGoperator.cpp  NumericLiteral.cpp  NumericLogicOperator.cpp  NumericOperator.cpp  Operator.cpp  Pile.cpp  PileCareTaker.cpp  Program.cpp  QComputer.cpp  UnaryOperator.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  LiteralManagerTest.cpp  LiteralTest.cpp  UtilTest.cpp
